[workspace]
members = [
    "crates/*",
]


[workspace.package]
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.1.1"
edition = "2021"
license = "MIT"

[package]
name = "ya-world-time"
description = "Library for getting current time from the world clock"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
chrono = "0.4.24"
log = "0.4.17"
sntpc = "0.3.2"
tokio = "1.26.0"
env_logger = "0.10.0"
winapi = "0.3.9"

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
sntpc = { workspace = true }
tokio = { workspace = true, features = ["net"] }
